fix(ui): spacing jobs out

--- a/style.css
+++ b/style.css
@@ -354,11 +354,13 @@ section-title:has(.section-title) {
   margin-top: 2rem;
 
   & p {
-    font: 1.5rem Manrope, sans-serif;
-    margin: 1rem 0;
+    font: 1.3rem Manrope, sans-serif;
+    margin: 0.7rem 0;
 
     &:first-child {
       font-weight: 700;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
     }
   }
 }
